style: use Java 21+ List.getFirst() and tidy imports